actual init commit

--- a/index+about.html
+++ b/index+about.html
@@ -35,7 +35,8 @@
           things to do: <strike> make header sticky,</strike> <strike>make
           navbar that jumps down page for projects,</strike> learn javascript,
           button in header for resume, photo carosel for projects <strike>button
-          in header for top of page</strike>, visit counter</p>
+          in header for top of page</strike>, visit counter, add in actual
+          photos, write content</p>
         <h3>About Me</h3>
         <p>
           Hello and welcome to my website! I am a Mechanical Engineering student
