expanded js folder to separate files

--- a/index+about.html
+++ b/index+about.html
@@ -8,7 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Lucas Dondertman's Website V3</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/idk.js"></script>
+    <script src="js/slideshow.js"></script>
+    <script src="js/topfunction.js"></script>
+    <script src="js/activeheader.js"></script>
   </head>
   <body>
     <main>
