Fixed header sizing bug on refresh

--- a/index+about.html
+++ b/index+about.html
@@ -8,7 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Lucas Dondertman's Website V3</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/slideshow.js"></script>
     <script src="js/topfunction.js"></script>
     <script src="js/activeheader.js"></script>
   </head>
@@ -35,10 +34,12 @@
       <div class="content">
         <p>
           things to do: <strike> make header sticky,</strike> <strike>make
-          navbar that jumps down page for projects,</strike> learn javascript,
+          navbar that jumps down page for projects,</strike>,
           button in header for resume, photo carosel for projects <strike>button
           in header for top of page</strike>, visit counter, add in actual
-          photos, write content</p>
+          photos, write content, add thingiverse acc, add github acc, <strike>
+          fix header bug</strike>, fix footer bug, move go to top button,
+          make text in header scale if page is narrow, </p>
         <h3>About Me</h3>
         <p>
           Hello and welcome to my website! I am a Mechanical Engineering student
@@ -119,9 +120,7 @@
           no resultant pleasure?
         </p>
       </div>
-    </main>
-    <footer class="footer">
-      <div id="bottom">
+      <div class="footer">
         <address>
           Website written by Lucas Dondertman.<br>
           Contact me at:<br>
@@ -131,8 +130,8 @@
           200 University Avenue West, Waterloo, ON<br>
           Canada  N2L 3G1<br>
         </address>
-      <!--authorship information, copyright information, contact information, sitemap, back to top links, related documents-->
+        <!--authorship information, copyright information, contact information, sitemap, back to top links, related documents-->
       </div>
-    </footer>
+    </main>
   </body>
 </html>
