--- a/portfolio.html
+++ b/portfolio.html
@@ -155,7 +155,7 @@
             <img src="pics/menuicon3.png" class="slideshowPic">
             <div class="text">Caption Two</div>
           </div>
-          <div class="mySli des4">
+          <div class="mySlides4">
             <img src="pics/profile pic.jpg" class="slideshowPic">
             <div class="text">Caption Three</div>
           </div>
@@ -181,9 +181,7 @@
           no resultant pleasure?
         </p>
       </div>
-    </main>
-    <footer class="footer">
-      <div id="bottom">
+      <div class="footer">
         <address>
           Website written by Lucas Dondertman.<br>
           Contact me at:<br>
@@ -193,9 +191,10 @@
           200 University Avenue West, Waterloo, ON<br>
           Canada  N2L 3G1<br>
         </address>
-      <!--authorship information, copyright information, contact information,
-      sitemap, back to top links, related documents-->
+        <!--authorship information, copyright information, contact information,
+        sitemap, back to top links, related documents-->
       </div>
-    </footer>
+    </main>
+
   </body>
 </html>
