--- a/portfolio.html
+++ b/portfolio.html
@@ -8,11 +8,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Lucas Dondertman's Website V3</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/slideshow.js"></script>
+    <script type="text/javascript" src="js/slideshow.js"></script>
     <script src="js/topfunction.js"></script>
     <script src="js/activeheader.js"></script>
   </head>
-  <body>
+  <body onload="slideshow()">
     <main>
       <header id="header">
         <div class="dropdown">
