--- a/testing/test.html
+++ b/testing/test.html
@@ -8,24 +8,138 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Lucas Dondertman's Website V4</title>
     <link rel="stylesheet" href="test.css">
-    <script src="test.js"></script>
+    <script src="testingslideshow.js"></script>
   </head>
   <body>
     <header>
-
-      <!--
-      <script type="text/javascript">
-        document.write("Hello World");
-        //document.write("Hello World");
-      </script>
-      -->
-
     </header>
     <main class="content">
       <div >
-        content
+        <h3 id="project1">Project1</h3>
+        <div class="slideshow-container">
+          <div class="mySlides1">
+            <img src="pics/nicepic1.jpg" class="slideshowPic">
+            <div class="text">Caption Text</div>
+          </div>
+          <div class="mySlides1">
+            <img src="pics/menuicon3.png" class="slideshowPic">
+            <div class="text">Caption Two</div>
+          </div>
+          <div class="mySlides1">
+            <img src="pics/profile pic.jpg" class="slideshowPic">
+            <div class="text">Caption Three</div>
+          </div>
+          <a class="prev" onclick="plusSlides(-1,0)">&#10094;</a>
+          <a class="next" onclick="plusSlides(1,0)">&#10095;</a>
+        </div>
+        <br>
+        <p>
+          But I must explain to you how all this mistaken idea of denouncing
+          pleasure and praising pain was born and I will give you a complete
+          account of the system, and expound the actual teachings of the great
+          explorer of the truth, the master-builder of human happiness. No one
+          rejects, dislikes, or avoids pleasure itself, because it is pleasure,
+          but because those who do not know how to pursue pleasure rationally
+          encounter consequences that are extremely painful. Nor again is there
+          anyone who loves or pursues or desires to obtain pain of itself,
+          because it is pain, but because occasionally circumstances occur in
+          which toil and pain can procure him some great pleasure. To take a
+          trivial example, which of us ever undertakes laborious physical
+          exercise, except to obtain some advantage from it? But who has any
+          right to find fault with a man who chooses to enjoy a pleasure that
+          has no annoying consequences, or one who avoids a pain that produces
+          no resultant pleasure?
+        </p>
+        <h3 id="project2">Project2</h3>
+        <div class="slideshow-container">
+          <div class="mySlides2">
+            <img src="pics/nicepic1.jpg" class="slideshowPic">
+            <div class="text">Caption Text</div>
+          </div>
+          <div class="mySlides2">
+            <img src="pics/profile pic.jpg" class="slideshowPic">
+            <div class="text">Caption Two</div>
+          </div>
+          <div class="mySlides2">
+            <img src="pics/menuicon3.png" class="slideshowPic">
+            <div class="text">Caption Three</div>
+          </div>
+          <a class="prev" onclick="plusSlides(-1,1)">&#10094;</a>
+          <a class="next" onclick="plusSlides(1,1)">&#10095;</a>
+        </div>
+        <br>
+        <p>
+          But I must explain to you how all this mistaken idea of denouncing
+          pleasure and praising pain was born and I will give you a complete
+          account of the system, and expound the actual teachings of the great
+          explorer of the truth, the master-builder of human happiness. No one
+          rejects, dislikes, or avoids pleasure itself, because it is pleasure,
+          but because those who do not know how to pursue pleasure rationally
+          encounter consequences that are extremely painful. Nor again is there
+          anyone who loves or pursues or desires to obtain pain of itself,
+          because it is pain, but because occasionally circumstances occur in
+          which toil and pain can procure him some great pleasure. To take a
+          trivial example, which of us ever undertakes laborious physical
+          exercise, except to obtain some advantage from it? But who has any
+          right to find fault with a man who chooses to enjoy a pleasure that
+          has no annoying consequences, or one who avoids a pain that produces
+          no resultant pleasure?
+        </p>
+        <h3 id="project3">Project3</h3>
+        <div class="slideshow-container">
+          <div class="mySlides3">
+            <img src="pics/nicepic1.jpg" class="slideshowPic">
+            <div class="text">Caption Text</div>
+          </div>
+          <div class="mySlides3">
+            <img src="pics/profile pic.jpg" class="slideshowPic">
+            <div class="text">Caption Two</div>
+          </div>
+          <div class="mySlides3">
+            <img src="pics/menuicon3.png" class="slideshowPic">
+            <div class="text">Caption Three</div>
+          </div>
+          <a class="prev" onclick="plusSlides(-1,2)">&#10094;</a>
+          <a class="next" onclick="plusSlides(1,2)">&#10095;</a>
+        </div>
+        <br>
+        <p>
+          But I must explain to you how all this mistaken idea of denouncing
+          pleasure and praising pain was born and I will give you a complete
+          account of the system, and expound the actual teachings of the great
+          explorer of the truth, the master-builder of human happiness. No one
+          rejects, dislikes, or avoids pleasure itself, because it is pleasure,
+          but because those who do not know how to pursue pleasure rationally
+          encounter consequences that are extremely painful. Nor again is there
+          anyone who loves or pursues or desires to obtain pain of itself,
+          because it is pain, but because occasionally circumstances occur in
+          which toil and pain can procure him some great pleasure. To take a
+          trivial example, which of us ever undertakes laborious physical
+          exercise, except to obtain some advantage from it? But who has any
+          right to find fault with a man who chooses to enjoy a pleasure that
+          has no annoying consequences, or one who avoids a pain that produces
+          no resultant pleasure?
+        </p>
+        <h3 id="project4">Project4</h3>
+        <div class="slideshow-container">
+          <div class="mySlides4">
+            <img src="pics/nicepic1.jpg" class="slideshowPic">
+            <div class="text">Caption Text</div>
+          </div>
+          <div class="mySlides4">
+            <img src="pics/menuicon3.png" class="slideshowPic">
+            <div class="text">Caption Two</div>
+          </div>
+          <div class="mySlides4">
+            <img src="pics/profile pic.jpg" class="slideshowPic">
+            <div class="text">Caption Three</div>
+          </div>
+          <a class="prev" onclick="plusSlides(-1,3)">&#10094;</a>
+          <a class="next" onclick="plusSlides(1,3)">&#10095;</a>
+        </div>
+        <br>
       </div>
     </main>
-    <footer class="footer">footer</footer>
+    <footer class="footer"></footer>
   </body>
 </html>
