minor style changes + moved button to top to bottom of page

--- a/index+about.html
+++ b/index+about.html
@@ -26,20 +26,17 @@
           </div>
         </div>
         <div id="nameTitle">Lucas Dondertman</div>
-        <div class="topBtnParent">
-          <button id="topBtn" onclick="topFunction()">Go To Top</button>
-        </div>
       </header>
       <br>
       <div class="content">
         <p>
           things to do: <strike> make header sticky,</strike> <strike>make
           navbar that jumps down page for projects,</strike>,
-          button in header for resume, photo carosel for projects <strike>button
-          in header for top of page</strike>, visit counter, add in actual
-          photos, write content, add thingiverse acc, add github acc, <strike>
-          fix header bug</strike>, fix footer bug, move go to top button,
-          make text in header scale if page is narrow, </p>
+          resume page, <strike>photo carosel for projects,
+          </strike> <strike>button in header for top of page</strike>, visit
+          counter, add in actual photos, write content, add thingiverse acc, add
+           github acc, <strike> fix header bug</strike>, fix footer bug, move go
+           to top button, make text in header scale if page is narrow, </p>
         <h3>About Me</h3>
         <p>
           Hello and welcome to my website! I am a Mechanical Engineering student
@@ -102,35 +99,22 @@
           has no annoying consequences, or one who avoids a pain that produces
           no resultant pleasure?
         </p>
-        <p>
-          But I must explain to you how all this mistaken idea of denouncing
-          pleasure and praising pain was born and I will give you a complete
-          account of the system, and expound the actual teachings of the great
-          explorer of the truth, the master-builder of human happiness. No one
-          rejects, dislikes, or avoids pleasure itself, because it is pleasure,
-          but because those who do not know how to pursue pleasure rationally
-          encounter consequences that are extremely painful. Nor again is there
-          anyone who loves or pursues or desires to obtain pain of itself,
-          because it is pain, but because occasionally circumstances occur in
-          which toil and pain can procure him some great pleasure. To take a
-          trivial example, which of us ever undertakes laborious physical
-          exercise, except to obtain some advantage from it? But who has any
-          right to find fault with a man who chooses to enjoy a pleasure that
-          has no annoying consequences, or one who avoids a pain that produces
-          no resultant pleasure?
-        </p>
-      </div>
-      <div class="footer">
-        <address>
-          Website written by Lucas Dondertman.<br>
-          Contact me at:<br>
-          Mobile: 647-407-2010<br>
-          E-mail: <a href="mailto:lucasdondertman@gmail.com">
-            lucasdondertman@gmail.com</a><br>
-          200 University Avenue West, Waterloo, ON<br>
-          Canada  N2L 3G1<br>
-        </address>
-        <!--authorship information, copyright information, contact information, sitemap, back to top links, related documents-->
+        <div class="topBtnParent">
+          <button id="topBtn" onclick="topFunction()">Go To Top</button>
+          <br>
+        </div>
+        <footer class="footer">
+          <address>
+            Website written by Lucas Dondertman.<br>
+            Contact me at:<br>
+            Mobile: 647-407-2010<br>
+            E-mail: <a href="mailto:lucasdondertman@gmail.com">
+              lucasdondertman@gmail.com</a><br>
+            200 University Avenue West, Waterloo, ON<br>
+            Canada  N2L 3G1<br>
+          </address>
+          <!--authorship information, copyright information, contact information, sitemap, back to top links, related documents-->
+        </footer>
       </div>
     </main>
   </body>
