--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Lucas Dondertman's Website V3</title>
     <link rel="stylesheet" href="css/style.css">
-    <script type="text/javascript" src="js/slideshow.js"></script>
+    <script src="js/slideshow.js"></script>
     <script src="js/topfunction.js"></script>
     <script src="js/activeheader.js"></script>
   </head>
@@ -27,9 +27,6 @@
           </div>
         </div>
         <div id="nameTitle">Lucas Dondertman</div>
-        <div class="topBtnParent">
-          <button id="topBtn" onclick="topFunction()">Go To Top</button>
-        </div>
       </header>
       <br>
       <div class="content">
@@ -180,19 +177,23 @@
           has no annoying consequences, or one who avoids a pain that produces
           no resultant pleasure?
         </p>
-      </div>
-      <div class="footer">
-        <address>
-          Website written by Lucas Dondertman.<br>
-          Contact me at:<br>
-          Mobile: 647-407-2010<br>
-          E-mail: <a href="mailto:lucasdondertman@gmail.com">
-            lucasdondertman@gmail.com</a><br>
-          200 University Avenue West, Waterloo, ON<br>
-          Canada  N2L 3G1<br>
-        </address>
-        <!--authorship information, copyright information, contact information,
-        sitemap, back to top links, related documents-->
+        <div class="topBtnParent">
+          <button id="topBtn" onclick="topFunction()">Go To Top</button>
+          <br>
+        </div>
+        <footer class="footer">
+          <address>
+            Website written by Lucas Dondertman.<br>
+            Contact me at:<br>
+            Mobile: 647-407-2010<br>
+            E-mail: <a href="mailto:lucasdondertman@gmail.com">
+              lucasdondertman@gmail.com</a><br>
+            200 University Avenue West, Waterloo, ON<br>
+            Canada  N2L 3G1<br>
+          </address>
+          <!--authorship information, copyright information, contact information,
+          sitemap, back to top links, related documents-->
+        </footer>
       </div>
     </main>
 
